Changes from jTDS 1.2.8
=======================

10/15/2013 - Holger Rehn
 o Implemented support for the COMPUTE (BY) operator (bug #678) for Sybase ASE.

09/06/2013 - Holger Rehn
 o Removed synchronization from method getAutoCommit().

09/03/2013 - Holger Rehn
 o Fixed bug #715, infinite loop when parsing an SQL command.
 o Fixed bug #710, invalid property handling in JtdsObjectFactory.

===============================================================================
06/08/2013 - jTDS 1.2.8 released
===============================================================================

Changes from jTDS 1.2.7
=======================

06/02/2013 - Holger Rehn
 o Fixed bug #702, ConnectionJDBC2.getMutex() isn't thread-safe.

05/16/2013 - Holger Rehn
 o Added range check to class BlobBuffer as proposed by Benedict Elliott Smith.
 o Applied patch for explicitly creating an in-memory BlobBuffer provided by
   Benedict Elliott Smith.

05/03/2013 - Holger Rehn
 o Fixed a bug that could cause the statement cache to be disabled. 
 o Removed unnecessary synchronization overhead from SQL statement parser.

05/01/2013 - Holger Rehn
 o Fixed bug #687, JtdsObjectFactory don't accept the connection property name
   mappings used in jTDS versions up to jTDS 1.2.6.

04/02/2013 - Holger Rehn
 o Fixed bug #699, conversion from timestamp String to Date fails.

03/08/2013 - Holger Rehn
 o Improved fix for bug #694, the previous attempt wasn't sufficient.

03/07/2013 - Holger Rehn
 o Applied fix for bug #695 provided by Keith Robinson.
 o Fixed bug #694, jTDS logger may cause an NPE. 

02/24/2013 - Holger Rehn
 o Fixed bug #508, the driver ignored unspecified server errors signaled by a
   TDS DONE token if no ERROR token has been received before.

02/18/2013 - Holger Rehn
 o Fixed bug #682, error when using date/time escapes in a procedure call.

01/25/2013 - Holger Rehn
 o Added test for JDBC date/time escapes used in a procedure call.

12/24/2012 - Holger Rehn